--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,160 @@
 /* default styles*/
 
-*{
-    box-sizing: border-box;
-    margin:0;
-    padding:0;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-image: linear-gradient(
+        0deg,
+      #fff 24%,
+      #be5cff 92%);
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-family: sans-serif;
 }
 
 
-body{
-    font-family: sans-serif;
-    background-image: linear-gradient(
-        0 deg,
-        rgba(247, 247, 247, 1)24%,
-        rgba(150, 1, 250, 0.6) 92%
-    );
-    height:100vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+
+.music-container {
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 15px 15px 0 #9254ba73;
+  display: flex;
+  padding: 20px 30px;
+  position: relative;
+  margin: 100px 0;
+  z-index: 100;
 }
 
-.music-container{
-    background-color: #fff;
-    border-radius:10px;
-    box-shadow:0 20px 20px 0 rgba(150, 1, 250, 0.3);
-    display:flex;
-    padding:20px 20px;
-    position: relative;
-    margin:100px 0;
-    z-index:10;
+.img-container {
+  position: relative;
+  width: 110px;
+  z-index: 100;
 }
 
-.img-container{
-    position: relative;
-    width:110px;
+.img-container img {
+  border-radius: 50%;
+  object-fit: cover;
+  height: 110px;
+  width: inherit;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  animation: rotate 3s linear infinite;
+  animation-play-state: paused;
 }
 
-.img-container img{
-    border-radius:50%;
-    object-fit: cover;
-    height: 110px;
-    width:inherit;
-    position: absolute;
-    bottom:0;
-    left:0;
-    animation: rotate 3s linear infinite;
 
-    animation-play-state: paused;
-}
-
-.music-container  .play .img-container img{
-    animation-play-state: running;
+.music-container.play .img-container img {
+  animation-play-state: running;
 }
 
 @keyframes rotate {
-    from{
-         transform: rotate(0);
-    }
+  from {
+    transform: rotate(0);
+  }
 
-    to{
-        transform: rotate(360deg);
-    }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.navigation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.action-btn {
+  background-color: #fff;
+  border: 0;
+  color: #c2c2c2;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 0 15px;
+}
+
+.action-btn-big {
+  color: #9e9e9e;
+  font-size: 30px;
+}
+
+.action-btn:focus {
+  outline: none;
+}
+
+.info{
+  color:#fff
+}
+
+.music-info {
+  background-color: #ffffff80;
+  border-radius: 15px 15px 0 0;
+  position: absolute;
+  top: 0;
+  width: 90%;
+  left: 20px;
+  padding: 10px 10px 10px 150px;
+  opacity: 0;
+  transform: translateY(0%);
+  transition: transform 0.3s ease-in, opacity 0.3s ease-in;
+  z-index: 0;
+}
+
+.images{
+  width:350px;
+  height: 350px;
+  border-radius:50%;
+  position: absolute;
+  right:19rem;
+  top:6rem;
+  z-index: -10;
+}
+ 
+
+.music-container.play .music-info {
+  opacity: 1;
+  transform: translateY(-100%);
+}
+
+.music-info h4 {
+  margin: 0;
+}
+
+.progress-container {
+  background-color: #fff;
+  cursor: pointer;
+  margin: 10px 0;
+  height: 5px;
+  width: 100%;
+  border-radius: 5px;
+}
+
+.progress {
+  background-color: #be5cff;
+  width: 0%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.music-player-image {
+  position: absolute;
+  border-radius: 50%;
+  z-index: -1;
+  left: 300px;
+  width: 400px;
+}
+
+.music-player-title {
+  margin: 0;
+  color: #fff;
 }
